# RenderFrameworkRIS

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  run-nosdl.sh  run.bat  run.sh
cmake/modules/: FindEmbree.cmake
contrib/include/tinyexr/: tinyexr.h
doc/html/: annotated.html  bbox_8h_source.html  bvh_8h_source.html  cameras_8h_source.html  classArgParser-members.html  classArgParser.html  classBsdf-members.html  classBsdf.html  classBvh-members.html  classBvh.html  classCamera-members.html  classCamera.html  classCombineBsdf-members.html  classCombineBsdf.html  classConstantTexture-members.html  classConstantTexture.html  classDiffuseBsdf-members.html  classDiffuseBsdf.html  classFilePath-members.html  classFilePath.html  classGlassBsdf-members.html  classGlassBsdf.html  classGlossyPhongBsdf-members.html  classGlossyPhongBsdf.html  classHashGrid-members.html  classHashGrid.html  classImageTexture-members.html  classImageTexture.html  classLight-members.html  classLight.html  classMirrorBsdf-members.html  classMirrorBsdf.html  classPerspectiveCamera-members.html  classPerspectiveCamera.html  classPointLight-members.html  classPointLight.html  classRenderer-members.html  classRenderer.html  classSampler-members.html  classSampler.html  (+115 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  (+34 more)
src/: CMakeLists.txt  bbox.h  bvh.cpp  bvh.h  cameras.h  color.h  common.h  debug.cpp  debug.h  file_path.h  float2.h  float3.h  float4.h  hash.h  hash_grid.h  image.cpp  image.h  lights.h  load_obj.cpp  load_obj.h  main.cpp  materials.h  options.h  parallel.h  random.h  renderer.h  samplers.h  scene.cpp  scene.h  textures.h
src/algorithms/: render_debug.cpp  render_ppm.cpp  render_pt.cpp
test/cornell_box/: cornell_box.yml  cornell_box_glossy.yml  cornell_box_specular.mtl  cornell_box_specular.yml  cornell_box_water.yml
